--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha1
	- Added Confirmation Screen to Catalog Deletion
	- Reorganized Menu System and Added Modules section
	- Fix an error if you try to add a shoutbox for an invalid object
		(Thx atrophic)
	- Fixed issue with art dump on jpeg files (Thx atrophic)
        - Fixed issue with force http play and port not correctly specifying
                non-standard http port (Thx Deathcrow)
	- Remember Starts With value even if you switch tabs
	- Fixed rating caching so it actually completely works now
	- Removed redundent UPDATE on session table due to /util.php
	- Added Batch Download to single Artist view
	- Added back in the direct links on songs, requires download set
		to enabled as it's essentially the same thing except with
		now playing information tied to it
	- Bumped API Version to 350001 and require that a version is sent
		with handshake to indicate the application will work
	- Removed the MyStrands plugin as did not provide good data, and does
		not appear to have been used
	- Added Catalog Prefix config option used to determine which prefixes
		should not be used for sorting
	- Merged Browse Menu with Home
	- Added checkbox to single artist view allowing you to enable/disable
		album art thumbnails on albums of said artist
	- Added timeout override on update_single_item because the function
		is a lie
	- Fix translations so it's not all german
	- Genre Tag is now used as a 'Tag', Browse Genre removed
	- Ignore getid3() iconv stuff doesn't seem to work
	- Improved fix_filenames.inc, tries a translation first then strips
		invalid characters 
	- Fixed album art not clearing thumbnail correctly on gather 